[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Arctiqa <sinitro@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.111.0"
isodate = "^0.6.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
